Task 2 Complete- CSS complete for testing purposes. Graded Assignment 4 done for testing purposes- personal portfolio page still a work in progress.

--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,29 @@
 /* Write your CSS here! */
+@media (prefers-reduced-motion: no-preference) {
+    * {
+        scroll-behavior: smooth;
+        font-family: sans-serif;
+        background-color: hsl(65, 31%, 93%);
+        color: dfdfe2;
+    }
 
+    body {
+        margin: 8px;
+        display: block;
+    }
+
+    .funParagraph{
+        font-family: wingdings;
+        color: green;
+    }
+
+    #testP{
+        color: green;
+    }
+
+    #mainHeading {
+        color: red;
+    }
+
+
+}
